Bug 1617657 - Store errorMessageName in JSErrorReport. r=jorendorff,mccr8

JSErrorFormatString::name should really be baked into the binary so we
don't need to do any memory management.

Differential Revision: https://phabricator.services.mozilla.com/D65828